Replaced images, Still working on fixing footer alignment css (height of footer div is different on resume page)

--- a/Resume/resume.css
+++ b/Resume/resume.css
@@ -80,16 +80,11 @@ li{
 #resume h3, #resume h4, #resume li, #resume p{
 	font-family: 'Century Gothic', CenturyGothic, AppleGothic, sans-serif;
 	color: black;
+	line-height: 1; 
 }
 .date{
 	float: right;
 	font-size: 1.25em; 
-}
-#contact p{
-	color: white;
-	line-height: 80%; 
-	text-align: right; 
-	font-size: 1.5em;
 }
 img{
 	display: inline-block;
@@ -156,6 +151,10 @@ img{
 {
     width: 100%;
     height: 60px;
+}
+
+.contact *{
+	vertical-align: middle; 
 }
 
 /* ==========================================================================
