--- a/css/main.css
+++ b/css/main.css
@@ -214,7 +214,7 @@ video {
     /* ---------------------- Footer ---------------------- */
     .footer{
         background-color: gray;
-        padding: 3% 10%;
+        padding: 50px 10%;
     }
     .footer > h2, .contact > h2, .contact > p, .contact > img{
         display: inline;
@@ -223,9 +223,15 @@ video {
         float: right;
         display: inline-block;
     }
-    .footer p{
-        font-size: 24px;
+    .contact p{
+        color: white;
+        line-height: 80%; 
+        text-align: right; 
+        font-size: 1.5em;
         margin: 0 25px;
+    }
+
+    .contact *{
         vertical-align: bottom;
     }
     .rightcontent{
